# ServerTeleQT

GDTTelemetryQt/: BUGFIX_LOG.md  BUILD_GUIDE.md  CMakeLists.txt  PROMPT.md
GDTTelemetryQt/GDTTelemetryQt/: CMakeLists.txt  main.cpp
GDTTelemetryQt/GDTTelemetryQt/.qtcreator/: CMakeLists.txt.user.de3cf07
GDTTelemetryQt/GDTTelemetryQt/core/: PacketParser.h
GDTTelemetryQt/GDTTelemetryQt/network/: MulticastReceiver.cpp  TelemetryServer.cpp  TelemetryServer.h
GDTTelemetryQt/GDTTelemetryQt/storage/: CsvLogger.cpp  CsvLogger.h  DatabaseManager.cpp  DatabaseManager.h
GDTTelemetryQt/GDTTelemetryQt/ui/: ErrorRatePanel.h  LedIndicator.h  MainWindow.h  Panel5E15.h  Panel5U44.h  PanelTelemetry.h  Setup5A42Dialog.cpp  SetupServerDialog.h
GDTTelemetryQt/core/: Constants.h  PacketParser.cpp
GDTTelemetryQt/models/: AppConfig.h  TelemetryData.h
GDTTelemetryQt/network/: MulticastReceiver.h  TelemetryServer.cpp  TelemetryServer.h
GDTTelemetryQt/storage/: CsvLogger.cpp  CsvLogger.h
GDTTelemetryQt/ui/: ChartPanel.cpp  ChartPanel.h  Detail5A42Dialog.cpp  Detail5A42Dialog.h  ErrorRatePanel.cpp  ErrorRatePanel.h  LedIndicator.cpp  MainWindow.cpp  MainWindow.h  MultiChartWidget.cpp  MultiChartWidget.h  OverlaidChart.cpp  OverlaidChart.h  Panel5A42.cpp  Panel5A42.h  Panel5E15.cpp  Panel5I41.cpp  Panel5I41.h  Panel5U44.cpp  Panel5U44.h  PanelTelemetry.cpp  SeparatedChart.cpp  SeparatedChart.h  Setup5A42Dialog.h  SetupServerDialog.cpp  SetupServerDialog.h  SignalDragLabel.h
